Issue 34406: Revisit Connection reuse without opening a full DbScope.Transaction
Sharing a connection with all callers on a thread means we need to ref count to know when to actually close the connection... which means every code path needs to call Connection.close() exactly once (not multiple times). Our uncached ResultSets hold onto a Connection, closing it when the ResultSet is closed, which means every code path needs to close ResultSets exactly once as well.

This commit addresses some of the cases where we close ResultSets multiple times, particularly TSVGridWriter usages that have been extremely aggressive about closing... a few cases have been closing the ResultSet 3 - 4 times. Refactor TSVGridWriter to close its ResultSet on close() only (not write()) and adjust the callers to use try-with-resources. Check isClosed() and skip subsequent closes. Implement isClosed() in a few Results/ResultSet implementations. Add a STRICT_CHECKING mode that throws if ResultSets are closed twice. (Currently off... need to fix ExcelWriter and various MS2 constructs before we can turn this on.)